get, update, delete, introspection implemented + pom dependencies updated + jwt token type change implemented